--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
         
         padding: 20px;
         
+        
       
 }
 .img{
@@ -28,6 +29,21 @@ body{
   margin: 20px 0 20px 20px;
   left: 5px;
   display: block;
+}
+.registrar{
+    
+justify-content:space-between;
+color: rgb(46, 230, 131) ;
+border: none;
+border: 2px solid rgb(46, 230, 131) ;
+position: fixed;
+right:  20px;
+padding: 7px;
+
+border-radius: 15px;
+background-color: #050350;
+
+
 }
 .icons{
     display: block;
@@ -65,7 +81,7 @@ p{
     border:  1.5px solid rgb(136, 131, 131);
 }
 .bu:hover{
-    background-color: rgb(17, 83, 17);
+    background-color:rgb(46, 230, 131);
     color: white;
   }
 .entrar{
@@ -113,7 +129,7 @@ input.entrar2{
     
     padding:16px;
     width: 100%;
-    background-color: rgb(20, 92, 20);
+    background-color: rgb(46, 230, 131) ;
     border-radius: 18px;
     border: none;
     border: 1.5px solid gray;
@@ -124,8 +140,9 @@ input.entrar2{
     
 }
 .entrar3 :hover{
-    
+    color:#ffffff;
 }
+
 h2{
     color: rgba(126, 123, 120, 0.466);
     align-items: center;
@@ -144,4 +161,7 @@ a{
     color: rgb(140, 152, 161);
     font-size: 12px;
     padding: 30px;
+}
+.icons{
+    background-color: rgb(46, 230, 131) ;
 }
